package p04_proxy;

public interface Contract {
    void sing();
}
